--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- App Name -->
-    <string name="app_name">Suzuki Service</string>
-
-    <!-- Header Section -->
-    <string name="welcome">Welcome</string>
-    <string name="profile_image">Profile Image</string>
-    <string name="logout">Logout</string>
-
-    <!-- Bike Service Card -->
-    <string name="service_checkup">Service Checkup</string>
-    <string name="in_days">In %1$d days</string>
-    <string name="service_icon">Service Icon</string>
-    <string name="time_icon">Time Icon</string>
-    <string name="bike_image">Bike Image</string>
-    <string name="expand_collapse">Expand/Collapse</string>
-    <string name="bike_name_default">GIXXER NEW SERIES FI DISC V4 BLACK</string>
-
-    <!-- Section Titles -->
-    <string name="our_service">Our Service</string>
-    <string name="explore">Explore</string>
-    <string name="offers">Offers</string>
-
-    <!-- Service Options -->
+    <string name="app_name">XtremeMoto</string>
     <string name="service_schedule">Service\nSchedule</string>
     <string name="service_packages">Service\nPackages</string>
     <string name="service_booking">Service\nBooking</string>
@@ -33,110 +10,26 @@
     <string name="warranty_policy">Warranty\nPolicy</string>
     <string name="test_ride">Test Ride</string>
 
-    <!-- Service Descriptions -->
-    <string name="service_schedule_desc">Schedule your next service appointment</string>
-    <string name="service_packages_desc">View available service packages</string>
-    <string name="service_booking_desc">Book a service for your bike</string>
-    <string name="service_history_desc">Check your service history</string>
-    <string name="dealers_desc">Find nearby Suzuki dealers</string>
-    <string name="offers_desc">View current offers and promotions</string>
-    <string name="bike_docs_desc">Access your bike documents</string>
-    <string name="warranty_policy_desc">View warranty policy details</string>
-    <string name="test_ride_desc">Book a test ride</string>
-
-    <!-- Content Descriptions -->
     <string name="explore_banner">Explore Banner</string>
     <string name="offers_banner">Offers Banner</string>
     <string name="banner_image">Banner Image</string>
+    <string name="profile_placeholder">User profile image</string>
+    <string name="empty_booking_illustration">Illustration for no bookings</string>
 
-    <!-- Bottom Navigation -->
-    <string name="nav_home">Home</string>
-    <string name="nav_profile">Profile</string>
-    <string name="nav_services">Services</string>
-    <string name="nav_notifications">Notifications</string>
+    <string name="our_service">Our Service</string>
+    <string name="explore">Explore</string>
+    <string name="offers">Offers</string>
+    <string name="find_nearest_dealer">Find Your Nearest Dealer</string>
 
-    <!-- Buttons -->
-    <string name="btn_book_now">Book Now</string>
-    <string name="btn_view_details">View Details</string>
-    <string name="btn_learn_more">Learn More</string>
-    <string name="btn_schedule">Schedule</string>
-    <string name="btn_cancel">Cancel</string>
-    <string name="btn_confirm">Confirm</string>
+    <string name="welcome">Welcome</string>
+    <string name="profile_image">Profile Image</string>
+    <string name="logout">Logout</string>
 
-    <!-- Messages -->
-    <string name="service_due_soon">Service due soon</string>
-    <string name="no_upcoming_service">No upcoming service scheduled</string>
-    <string name="loading">Loading...</string>
-    <string name="error_loading_data">Error loading data</string>
-    <string name="no_internet">No internet connection</string>
-    <string name="try_again">Try Again</string>
-
-    <!-- Dialog Messages -->
-    <string name="logout_confirmation">Are you sure you want to logout?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-
-    <!-- Toast Messages -->
-    <string name="service_scheduled_success">Service scheduled successfully</string>
-    <string name="booking_failed">Booking failed. Please try again</string>
-    <string name="coming_soon">Coming soon</string>
-
-    <!-- Explore Section -->
-    <string name="want_to_test_ride">Want to test ride?</string>
-    <string name="test_ride_with_us">Test ride with us!</string>
-    <string name="suzuki_tagline">Way of Life!</string>
-
-    <!-- Service Status -->
-    <string name="status_pending">Pending</string>
-    <string name="status_completed">Completed</string>
-    <string name="status_in_progress">In Progress</string>
-    <string name="status_cancelled">Cancelled</string>
-
-    <!-- Date & Time -->
-    <string name="today">Today</string>
-    <string name="tomorrow">Tomorrow</string>
-    <string name="days_remaining">%1$d days remaining</string>
-
-    <!-- Error Messages -->
-    <string name="error_invalid_input">Invalid input</string>
-    <string name="error_network">Network error occurred</string>
-    <string name="error_generic">Something went wrong</string>
-
-    <!-- Empty States -->
-    <string name="no_service_history">No service history available</string>
-    <string name="no_offers_available">No offers available at the moment</string>
-    <string name="no_dealers_nearby">No dealers found nearby</string>
-
-    <!-- Bike Information -->
-    <string name="bike_model">Model</string>
-    <string name="bike_year">Year</string>
-    <string name="bike_color">Color</string>
-    <string name="bike_registration">Registration Number</string>
-    <string name="bike_purchase_date">Purchase Date</string>
-    <string name="bike_mileage">Mileage</string>
-
-    <!-- Service Details -->
-    <string name="service_type">Service Type</string>
-    <string name="service_date">Service Date</string>
-    <string name="service_time">Service Time</string>
-    <string name="service_location">Service Location</string>
-    <string name="service_cost">Service Cost</string>
-
-    <!-- Contact -->
-    <string name="contact_dealer">Contact Dealer</string>
-    <string name="call_now">Call Now</string>
-    <string name="get_directions">Get Directions</string>
-
-    <!-- Settings -->
-    <string name="settings">Settings</string>
-    <string name="notifications_settings">Notification Settings</string>
-    <string name="language">Language</string>
-    <string name="about">About</string>
-    <string name="privacy_policy">Privacy Policy</string>
-    <string name="terms_conditions">Terms &amp; Conditions</string>
-
-    <!-- Search -->
-    <string name="search">Search</string>
-    <string name="search_dealers">Search dealers...</string>
-    <string name="search_services">Search services...</string>
+    <string name="service_checkup">Service Checkup</string>
+    <string name="in_days">In %1$d days</string>
+    <string name="service_icon">Service Icon</string>
+    <string name="time_icon">Time Icon</string>
+    <string name="bike_image">Bike Image</string>
+    <string name="expand_collapse">Expand/Collapse</string>
+    <string name="bike_name_default">GIXXER NEW SERIES FI DISC V4 BLACK</string>
 </resources>
