added parts and bikes frag

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="bike_docs">Bike Doc\'s</string>
     <string name="warranty_policy">Warranty\nPolicy</string>
     <string name="test_ride">Test Ride</string>
+    <string name="parts">Parts</string>
+    <string name="bikes">Bikes</string>
 
     <string name="explore_banner">Explore Banner</string>
     <string name="offers_banner">Offers Banner</string>
